@@ -1,35 +1,51 @@
 package org.phoebus.logbook.olog.ui;
 
+import javafx.beans.binding.Bindings;
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.SimpleBooleanProperty;
+import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
 import javafx.fxml.FXML;
-import javafx.scene.control.Hyperlink;
-import javafx.scene.control.Label;
-import javafx.scene.control.TextField;
-import javafx.scene.control.TreeItem;
-import javafx.scene.control.TreeTableCell;
-import javafx.scene.control.TreeTableColumn;
-import javafx.scene.control.TreeTableView;
+import javafx.scene.control.*;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
+import javafx.scene.input.Clipboard;
+import javafx.scene.input.ClipboardContent;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.Pane;
 import javafx.util.Callback;
+import org.phoebus.framework.preferences.Preference;
+import org.phoebus.framework.selection.SelectionService;
+import org.phoebus.framework.spi.AppResourceDescriptor;
+import org.phoebus.framework.util.ResourceParser;
+import org.phoebus.framework.workbench.ApplicationService;
 import org.phoebus.logbook.Property;
 import org.phoebus.logbook.PropertyImpl;
+import org.phoebus.ui.Preferences;
+import org.phoebus.ui.application.ContextMenuService;
+import org.phoebus.ui.javafx.ImageCache;
+import org.phoebus.ui.spi.ContextMenuEntry;
 
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 public class LogPropertiesController {
+
+    private static final Logger logger = Logger.getLogger(LogPropertiesController.class.getName());
+    static final ImageView copy = ImageCache.getImageView(LogPropertiesController.class, "/icons/copy_edit.png");
+
+    private Map<String, String> attributeTypes = new HashMap<>();
 
     @FXML
     TreeTableView<PropertyTreeNode> treeTableView;
@@ -45,6 +61,27 @@ public class LogPropertiesController {
     @FXML
     public void initialize()
     {
+        // Read the attribute types
+        String url = LogbookUIPreferences.log_attribute_desc;
+        if (url.isEmpty())
+        {
+            final URL resource = getClass().getResource("log_property_attributes.properties");
+            url = resource.toExternalForm();
+        }
+        try (InputStream input = new URL(url).openStream() ) {
+            Properties prop = new Properties();
+            prop.load(input);
+            prop.stringPropertyNames().stream().forEach((p) -> {
+                attributeTypes.put(p.toLowerCase(), prop.getProperty(p).toLowerCase());
+                }
+            );
+
+        } catch (IOException ex) {
+            ex.printStackTrace();
+        }
+
+
+        // create the property trees
         name.setMaxWidth(1f * Integer.MAX_VALUE * 40);
         name.setCellValueFactory(
                 new Callback<TreeTableColumn.CellDataFeatures<PropertyTreeNode, String>, ObservableValue<String>>() {
@@ -55,18 +92,17 @@ public class LogPropertiesController {
 
         value.setMaxWidth(1f * Integer.MAX_VALUE * 60);
         value.setCellValueFactory(
-                new Callback<TreeTableColumn.CellDataFeatures<PropertyTreeNode, String>, ObservableValue<String>>() {
-                    public ObservableValue<String> call(TreeTableColumn.CellDataFeatures<PropertyTreeNode, String> p) {
-                        return p.getValue().getValue().valueProperty();
+                new Callback<TreeTableColumn.CellDataFeatures<PropertyTreeNode, ?>, SimpleObjectProperty<PropertyTreeNode>>() {
+                    public SimpleObjectProperty<PropertyTreeNode> call(TreeTableColumn.CellDataFeatures<PropertyTreeNode, ?> p) {
+                        return p.getValue().getValue().nodeProperty();
                     }
                 });
         value.setEditable(editable.getValue());
-        value.setCellFactory(new Callback<TreeTableColumn<PropertyTreeNode, String>,
-                                          TreeTableCell<PropertyTreeNode, String>>() {
+        value.setCellFactory(new Callback<TreeTableColumn<PropertyTreeNode, Object>, TreeTableCell<PropertyTreeNode, Object>>() {
 
             @Override
-            public TreeTableCell<PropertyTreeNode, String> call(TreeTableColumn<PropertyTreeNode, String> param) {
-                return new TreeTableCell<PropertyTreeNode, String> () {
+            public TreeTableCell<PropertyTreeNode, Object> call(TreeTableColumn<PropertyTreeNode, Object> param) {
+                return new TreeTableCell<>() {
 
                     private TextField textField;
 
@@ -85,22 +121,83 @@ public class LogPropertiesController {
                     @Override
                     public void cancelEdit() {
                         super.cancelEdit();
-                        setText((String) getItem());
+                        setText(((PropertyTreeNode)getItem()).getValue());
                         setGraphic(getTreeTableRow().getGraphic());
                     }
 
                     @Override
-                    public void updateItem(String item, boolean empty){
+                    public void updateItem(Object item, boolean empty){
                         super.updateItem(item, empty);
                         if (empty) {
                             setGraphic(null);
                         } else {
-                            try {
-                                URL url = new URL(item);
-                                final Hyperlink link = new Hyperlink(url.toString());
-                                setGraphic(link);
-                            } catch (Exception e) {
-                                setGraphic(new Label(item));
+                            PropertyTreeNode propertyItem = ((PropertyTreeNode)item);
+                            if (attributeTypes.containsKey(propertyItem.getFullQualifiedName().toLowerCase())) {
+                                switch (attributeTypes.get(propertyItem.getFullQualifiedName().toLowerCase())) {
+                                    case "url":
+                                        final String url = propertyItem.getValue();
+                                        final URI uri = URI.create(url);
+                                        final Hyperlink urlLink = new Hyperlink(propertyItem.getValue());
+                                        // TODO open url in some webclient
+                                        urlLink.setOnContextMenuRequested((e) -> {
+                                            ContextMenu contextMenu = new ContextMenu();
+                                            final List<AppResourceDescriptor> applications = ApplicationService.getApplications(uri);
+                                            applications.forEach( app -> {
+                                                MenuItem menuItem = new MenuItem(app.getDisplayName());
+                                                menuItem.setGraphic(ImageCache.getImageView(app.getIconURL()));
+                                                menuItem.setOnAction(actionEvent -> app.create(uri));
+                                                contextMenu.getItems().add(menuItem);
+                                            });
+                                            contextMenu.getItems().add(new SeparatorMenuItem());
+                                            MenuItem copyMenuItem = new MenuItem("copy", copy);
+                                            copyMenuItem.setOnAction(event -> {
+                                                final ClipboardContent content = new ClipboardContent();
+                                                content.putString(uri.toString());
+                                                Clipboard.getSystemClipboard().setContent(content);
+                                            });
+                                            contextMenu.getItems().add(copyMenuItem);
+                                            urlLink.setContextMenu(contextMenu);
+                                        });
+                                        setGraphic(urlLink);
+                                        break;
+                                    case "resource":
+                                        final String resourceURL = propertyItem.getValue();
+                                        final URI resource = URI.create(resourceURL);
+                                        final Hyperlink resourceLink = new Hyperlink(resourceURL);
+                                        setGraphic(resourceLink);
+                                        // Open resource using the default application
+                                        resourceLink.setOnAction((e) -> {
+                                            final List<AppResourceDescriptor> applications = ApplicationService.getApplications(resource);
+                                            if (!applications.isEmpty()) {
+                                                applications.get(0).create(resource);
+                                            }
+                                        });
+                                        resourceLink.setOnContextMenuRequested((e) -> {
+                                            ContextMenu contextMenu = new ContextMenu();
+                                            final List<AppResourceDescriptor> applications = ApplicationService.getApplications(resource);
+                                            applications.forEach( app -> {
+                                                MenuItem menuItem = new MenuItem(app.getDisplayName());
+                                                menuItem.setGraphic(ImageCache.getImageView(app.getIconURL()));
+                                                menuItem.setOnAction(actionEvent -> app.create(resource));
+                                                contextMenu.getItems().add(menuItem);
+                                            });
+                                            contextMenu.getItems().add(new SeparatorMenuItem());
+                                            MenuItem copyMenuItem = new MenuItem("copy", copy);
+                                            copyMenuItem.setOnAction(event -> {
+                                                final ClipboardContent content = new ClipboardContent();
+                                                content.putString(resource.toString());
+                                                Clipboard.getSystemClipboard().setContent(content);
+                                            });
+                                            contextMenu.getItems().add(copyMenuItem);
+                                            resourceLink.setContextMenu(contextMenu);
+
+                                        });
+                                        break;
+                                    default:
+                                        setGraphic(new Label(propertyItem.getValue()));
+                                }
+                            } else {
+                                setGraphic(new Label(propertyItem.getValue()));
                             }
                         }
                     }
@@ -109,14 +206,16 @@ public class LogPropertiesController {
                         textField = new TextField(getString());
                         textField.setOnKeyReleased((KeyEvent t) -> {
                             if (t.getCode() == KeyCode.ENTER) {
-                                commitEdit(textField.getText());
+                                ((PropertyTreeNode) getItem()).setValue(textField.getText());
+                                commitEdit(getItem());
                             } else if (t.getCode() == KeyCode.ESCAPE) {
                                 cancelEdit();
                             }
                         });
                     }
-                    private String getString() {
-                        return getItem() == null ? "" : getItem().toString();
+                    private String getString()
+                    {
+                        return getItem() == null ? "" : ((PropertyTreeNode)getItem()).getValue().toString();
                     }
                 };
             }
@@ -144,16 +243,19 @@ public class LogPropertiesController {
     }
 
     private void constructTree(Collection<Property> properties) {
-        TreeItem root = new TreeItem(new PropertyTreeNode("properties", " "));
+        TreeItem root = new TreeItem(new PropertyTreeNode("", "properties", " "));
         AtomicReference<Double> rowCount = new AtomicReference<>((double) 1);
         root.getChildren().setAll(properties.stream()
                 .map(property -> {
-            PropertyTreeNode node = new PropertyTreeNode(property.getName(), " ");
+            PropertyTreeNode node = new PropertyTreeNode(property.getName(), property.getName(), " ");
             rowCount.set(rowCount.get() + 1);
             TreeItem<PropertyTreeNode> treeItem = new TreeItem<>(node);
             property.getAttributes().entrySet().stream().forEach(entry -> {
                 rowCount.set(rowCount.get() + 1);
-                treeItem.getChildren().add(new TreeItem<>(new PropertyTreeNode(entry.getKey(), entry.getValue())));
+                treeItem.getChildren().add(new TreeItem<>(
+                        new PropertyTreeNode(property.getName()+"."+entry.getKey(),
+                                             entry.getKey(),
+                                             entry.getValue())));
             });
             treeItem.setExpanded(true);
             return treeItem;
@@ -194,6 +296,7 @@ public class LogPropertiesController {
 
     private static class PropertyTreeNode
     {
+        private String fullQualifiedName;
         private SimpleStringProperty name;
         private SimpleStringProperty value;
 
@@ -211,7 +314,12 @@ public class LogPropertiesController {
             return value;
         }
 
-        private PropertyTreeNode(String name, String value) {
+        public SimpleObjectProperty<PropertyTreeNode> nodeProperty() {
+            return new SimpleObjectProperty<PropertyTreeNode>(this);
+        }
+
+        private PropertyTreeNode(String fullQualifiedName, String name, String value) {
+            this.fullQualifiedName = fullQualifiedName;
             this.name = new SimpleStringProperty(name);
             this.value = new SimpleStringProperty(value);
         }
@@ -227,6 +335,10 @@ public class LogPropertiesController {
         }
         public void setValue(String value) {
             this.value.set(value);
+        }
+
+        public String getFullQualifiedName() {
+            return this.fullQualifiedName;
         }
     }
 }
